...
            "state" : "translated",
            "value" : "Hinzufügen"
          }
        }
      }
    },
    "Add Plant" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pflanze hinzufügen"
          }
...
            "state" : "translated",
            "value" : "Name"
          }
        }
      }
    },
    "New Plant" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neue Pflanze"
...
            "state" : "translated",
            "value" : "Die Pflanzendetails konnten nicht geladen werden: %@"
          }
        }
      }
    },
    "Plant name" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pflanzenname"
          }
...
            "state" : "translated",
            "value" : "Pflanzenname und Art sind erforderlich."
          }
        }
      }
    },
    "Plants" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pflanzen"
          }
...
            "state" : "translated",
            "value" : "Die angeforderte Pflanze wurde im lokalen Katalog nicht gefunden."
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Speichern"
          }
...
            "state" : "translated",
            "value" : "Bogenhanf"
          }
        }
      }
    },
    "Species name" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Artname"
          }
...
